crates/keron-lang/tests/corpus/errors/check/coalesce_type_mismatch.keron
val x: String = env("X") ?? 5
